# malloc_and_gc-By_c

./: CMakeLists.txt  README.md  malloc.code-workspace
1.malloc/: CMakeLists.txt
1.malloc/inc/: malloc.h
1.malloc/src/: malloc.c
1.malloc/test/: main.c
2.gc_malloc/: CMakeLists.txt
2.gc_malloc/inc/: gc_malloc.h
2.gc_malloc/src/: gc_malloc.c
2.gc_malloc/test/: main.c
